--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack-watch": "./node_modules/webpack/bin/webpack.js --watch"
   },
   "keywords": [],
   "author": "Ojutiku Oluwatobi",
