--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack-watch": "./node_modules/webpack/bin/webpack.js --watch"
+    "webpack-watch": "./node_modules/webpack/bin/webpack.js --watch",
+    "build": "./node_modules/webpack/bin/webpack.js --build"    
   },
   "keywords": [],
   "author": "Ojutiku Oluwatobi",
